--- a/SLADCP_vis.ipynb
+++ b/SLADCP_vis.ipynb
@@ -45,11 +45,8 @@
     "SADCP = get_SADCP(year)\n",
     "LADCP = get_LADCP(year)\n",
     "CTD = get_CTD(year)\n",
-    "#bathy = get_bathy()\n",
+    "bathy = get_bathy()\n",
     "\n",
-    "bathyds = xr.open_dataset('data/Bathy.nc')\n",
-    "bathy = bathyds['elevation']\n",
-    "land_mask = bathy.where(bathy <= 0)\n",
     "proj = ccrs.Mercator(central_longitude=4.5, min_latitude=30.0, max_latitude=45.0)"
    ]
   },
