--- a/SLADCP_vis.ipynb
+++ b/SLADCP_vis.ipynb
@@ -5,13 +5,12 @@
    "metadata": {},
    "source": [
     "- bateau animation\n",
-    "- moyenne glissante ??\n",
-    "- bathymetrie "
+    "- moyenne glissante ??"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +29,12 @@
     "\n",
     "from T_S_diagram import ts_diagram\n",
     "\n",
-    "from data_loading import get_LADCP, get_SADCP,get_CTD,get_2021_CTD_data\n"
+    "from data_loading import get_LADCP, get_SADCP,get_CTD,get_bathy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +76,7 @@
     "fig, ax = plt.subplots(3,1,figsize=(20,20),subplot_kw={'projection': proj})\n",
     "ax.flatten()\n",
     "\n",
-    "land_mask.plot(ax=ax[0], transform=ccrs.PlateCarree(), cmap=cmo.deep, vmin=-3000, vmax=0,add_colorbar=False)\n",
+    "bathy.plot(ax=ax[0], transform=ccrs.PlateCarree(), cmap=cmo.deep, vmin=-3000, vmax=0,add_colorbar=False)\n",
     "sc = ax[0].scatter (CTD['longitude'],CTD['latitude'], s=10, c=CTD['idx'], cmap=cmo.thermal, alpha=0.8,  transform=ccrs.PlateCarree())\n",
     "ax[0].set_extent([0, 12, 38, 45], crs=ccrs.PlateCarree())\n",
     "ax[0].add_feature(cfeature.LAND)\n",
@@ -89,7 +88,7 @@
     "ax[0].set_title('CTD measurements locations')\n",
     "\n",
     "\n",
-    "land_mask.plot(ax=ax[1], transform=ccrs.PlateCarree(), cmap=cmo.deep, vmin=-3000, vmax=0,add_colorbar=False)\n",
+    "bathy.plot(ax=ax[1], transform=ccrs.PlateCarree(), cmap=cmo.deep, vmin=-3000, vmax=0,add_colorbar=False)\n",
     "sc = ax[1].scatter (SADCP['longitude'],SADCP['latitude'], s=10, c=SADCP['idx'], cmap=cmo.thermal, alpha=0.8, transform=ccrs.PlateCarree())\n",
     "ax[1].set_extent([0, 12, 38, 45], crs=ccrs.PlateCarree())\n",
     "ax[1].add_feature(cfeature.LAND)\n",
@@ -100,7 +99,7 @@
     "cbar.set_label('SADCP Stations')\n",
     "ax[1].set_title('SADCP measurements locations')\n",
     "\n",
-    "land_mask.plot(ax=ax[2], transform=ccrs.PlateCarree(), cmap=cmo.deep, vmin=-3000, vmax=0,add_colorbar=False)\n",
+    "bathy.plot(ax=ax[2], transform=ccrs.PlateCarree(), cmap=cmo.deep, vmin=-3000, vmax=0,add_colorbar=False)\n",
     "sc = ax[2].scatter (LADCP['longitude'],LADCP['latitude'], s=10, c=LADCP['idx'],cmap = cmo.thermal, alpha=0.8,transform=ccrs.PlateCarree())\n",
     "ax[2].set_extent([0, 12, 38, 45], crs=ccrs.PlateCarree())\n",
     "ax[2].add_feature(cfeature.LAND)\n",
